# VoxFauge

./: .env.deploy.example  .env.example  .env.production.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  LICENSE  Makefile  README.md  SECURITY.md  deploy.sh  docker-compose.prod.yml  docker-compose.smoke.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  good_first_issue.md  help_wanted.md
.github/workflows/: ci.yml  deploy-smoke.yml
alembic/: env.py
alembic/versions/: 001_voice_sessions.py  002_auth.py  003_memory.py  004_tool_calls.py  005_evaluations.py  006_onboarding_templates_outcomes.py  007_agent_config_versions.py  008_saml_connections.py  009_demo_org.py  010_knowledge_base.py  011_human_handoff.py  011_human_handoff.py.proposed  012_integrity_hardening.py  013_organization_invites.py
dashboard/: index.html
dashboard/static/: app.js  styles.css
deploy/nginx/: nginx.conf
docs/: CONFIGURATION.md  FAQ.md  ONBOARDING.md  README.md  ROADMAP.md  hardening-sprint.md  project-metrics.md
docs/adr/: ADR-001-programmatic-voice-pipeline-runner.md  ADR-002-onboarding-session-lifecycle.md  README.md  (+6 more)
scripts/: backup_postgres.sh  benchmark_knowledge_base.py  benchmark_onboarding.py  bootstrap-server.sh  chaos-test.sh  cloudflare-dns.sh  create-droplet.sh  deploy-all.sh  docker-entrypoint.sh  e2e_qa_manual.py  ensure_demo_account.py  eval_gate.py  generate_coverage_report.py  generate_project_metrics.py  install-backup-cron.sh  prove-real-voice.sh  provision-droplet.sh  release-freeze.sh  remote-deploy.sh  run_browser_tests.sh  run_live_tests.sh  setup-production-env.sh  smoke-test.sh  sync-git-remote.sh  test_voice_ws.py  uptime-ready-check.sh  validate-prod-smoke.sh  validate_production_env.py
tests/: conftest.py
(+381 files in other folders)
