[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxforge"
version = "0.1.0"
description = "Production-grade Voice AI Infrastructure Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "openai>=1.57.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.18",
    "pyjwt>=2.10.0",
    "bcrypt>=4.2.0",
    "email-validator>=2.2.0",
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "signxml>=4.0.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.2.0",
]
livekit = [
    "livekit-api>=0.8.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
    "fakeredis>=2.26.0",
    "aiosqlite>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/voxforge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: tests that require live API keys",
    "postgres: tests requiring PostgreSQL with pgvector",
]

[tool.coverage.run]
source = ["src/voxforge"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
